<resources>
    <string name="app_name">Still Mind</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="menu">Menu</string>
    <string name="begin_session">Begin Session</string>
    <string name="analytics">Analytics</string>
    <string name="settings">Settings</string>
    <string name="title">Still Mind</string>
    <string name="calendar">Calendar</string>
    <string name="set_default_length">Set Default Session Length</string>
    <string name="logout">Log out</string>



    <string name="circle">
M527.023,71.8233 C780.213,71.8233,985.464,277.075,985.464,530.265
C985.464,783.455,780.213,988.707,527.023,988.707
C273.832,988.707,68.5809,783.455,68.5809,530.265
C68.5809,277.075,273.832,71.8233,527.023,71.8233 Z
</string>
    <integer name="circle_original_width">1100</integer>
    <integer name="circle_original_height">1075</integer>


</resources>
